src/objects/E2_Milestone_Week_Template_Junction__c.object
<CustomObject>
    <fields>
        <fullName>TextColorCode__c</fullName>
        <description>Stores the text colour of the milestone created in the template.</description>
        <inlineHelpText>Stores the text colour of the milestone created in the template.</inlineHelpText>
        <label>TextColorCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeline_Milestone__c</fullName>
        <label>Timeline Milestone</label>
        <referenceTo>E2_Timeline_Milestone__c</referenceTo>
        <relationshipLabel>Milestone Week Template Junction</relationshipLabel>
        <relationshipName>Milestone_Week_Template_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Milestone_Template__c</fullName>
        <label>Week Milestone Template</label>
        <referenceTo>E2_Week_Milestone_Template__c</referenceTo>
        <relationshipLabel>Milestone Week Template Junction</relationshipLabel>
        <relationshipName>Milestone_Week_Template_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Milestone Week Template Junction</label>
    <nameField>
        <displayFormat>MWE-{0000}</displayFormat>
        <label>Milestone Week Template Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Week Template Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>